# team-agents-sdk

./: .gitignore  ARCHITECTURE.html  CHANGELOG.md  CLAUDE.md  Makefile  docker-compose.yml  drizzle.config.ts  env.template  package.json  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude/commands/: check.md  crud.md  hook.md  migrate.md  model.md  schema.md  ship.md  sync.md  table.md  test.md
.claude/rules/: context.md  memory.md
.github/workflows/: architecture.yml  ci.yml  claude.yml  coderabbit.yml  neon-branch.yml  release.yml
app/: layout.tsx  page.tsx
app/db/: schema.ts
docs/audits/: wsl-distro-review-plan.md
docs/emails/: aiven-startup-application.md  dragonflydb-design-partner.md  redis-startup-application.md  upstash-startup-application.md
docs/references/: anthropic-org-patterns.md  claude-code-action-cloud-providers.md  claude-code-action-oauth.md  claude-code-action-official.md  codacy.md  coderabbit-retry-action.md  github-apps-research.md
infra/terraform/: .gitignore  (+7 more)
lib/: db.ts
migrations/: 0001_initial.sql
research/: 00-synthesis.md  01-claude-agent-sdk-python.md  02-mlflow-39-genai-tracing.md  03-claude-code-cli-integration.md  04-crawling-tools-llmstxt-caching.md
scripts/: codegen.py  gen_architecture.py  secrets-setup.sh  seed_db.py  sync-claude-oauth.sh  sync_github.py
semantic/: _enums.yaml  agent_activity.yaml  mlflow_traces.yaml  subtasks.yaml  task_dependencies.yaml  tasks.yaml
src/: get_env.py
tests/: test_cache.py  test_crud.py  test_db.py  test_hooks.py  test_models.py  test_tracing.py
(+78 files in other folders)
