[project]
name = "jadecli-team-agents-sdk"
version = "0.1.1"
description = "Multi-agent task system with Neon Postgres, Claude Agent SDK, and MLflow tracing"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.33",
    "mlflow[genai]>=3.9",
    "pydantic>=2.7",
    "sqlalchemy[asyncio]>=2.0.33",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
